# uniswap-capstone

./: .gitignore  .gitmodules  README.md
arrakis-diamond/: remappings.txt
arrakis-diamond/src/: DiamondHookPoC.sol
back/: README.md
back/src/: lib.rs  logic.rs  main.rs
ext-diamond/: Cargo.toml  rust-toolchain.toml
ext-diamond/src/: lib.rs  main.rs
front/: foundry.toml  remappings.txt
front/src/: Counter.sol  DiamondHook.sol
front/src/libraries/: LiquidityAmounts.sol
proxy/: Cargo.toml
proxy/scripts/: nitro-testnode.sh  test-unit.sh
